Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/Appraisal_Letter__c.object-meta.xml
<CustomObject>
    <label>Appraisal Letter</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Appraisal Letter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisal Letters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>