Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/fields/Appraisal_date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appraisal Date</label>
    <type>Date</type>
</CustomField>