Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/fields/Appraisal_From__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_From__c</fullName>
    <formula>Candidate_Name__r.Total_CTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraisal From</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>