Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/fields/Appraisal_To__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_To__c</fullName>
    <label>Appraisal To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>