Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate_Information__c</referenceTo>
    <relationshipLabel>Appraisal Letters</relationshipLabel>
    <relationshipName>Appraisal_Letters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>