Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/validationRules/Appraisal_to_should_be_Greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Appraisal_to_should_be_Greater</fullName>
    <active>true</active>
    <errorConditionFormula>Appraisal_From__c &gt; Appraisal_To__c</errorConditionFormula>
    <errorDisplayField>Appraisal_To__c</errorDisplayField>
    <errorMessage>Appraisal To should be Greater than Appraisal from</errorMessage>
</ValidationRule>