Githubsalesforcebackup/force-app/main/default/objects/Appraisal_Letter__c/validationRules/Appraisel_Year_Should_Not_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Appraisel_Year_Should_Not_Be_Same</fullName>
    <active>false</active>
    <description>Appraisel_Year_Should_Not_Be_Same</description>
    <errorConditionFormula>AND(
  ISCLONE(),
  ISNEW(),  YEAR( Appraisal_date__c)  =  YEAR( TODAY()) 
)</errorConditionFormula>
    <errorMessage>Year should not be same for the Appraisal date</errorMessage>
</ValidationRule>